--- a/MvcGuessMySonsName/Views/Home/Index.cshtml
+++ b/MvcGuessMySonsName/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     <div class="content-wrapper">
         <div class="float-left">
             <p class="site-title">
-                <a href="~/">ASP.NET Web API</a></p>
+                <a href="~/">Jakob</a></p>
         </div>
     </div>
 </header>
