--- a/MvcGuessMySonsName/Views/Home/Index.cshtml
+++ b/MvcGuessMySonsName/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = "Giskaðu á nafn sonar míns";
-    ViewBag.Subtitle = "Föðurnafnið þarf ekki að rita";
+    ViewBag.Subtitle = "Föðurnafnið þarf ekki að rita.";
 }
 
 <div id="body">
