--- a/MvcGuessMySonsName/Views/Shared/_Layout.cshtml
+++ b/MvcGuessMySonsName/Views/Shared/_Layout.cshtml
@@ -9,7 +9,20 @@
 </head>
 <body>
 
-    @RenderBody()
+    <div id="body">
+        <section class="featured">
+            <div class="content-wrapper">
+                <hgroup class="title">
+                    <h1>@ViewBag.Title.</h1>
+                    <h2>@ViewBag.Subtitle</h2>
+                </hgroup>
+            </div>
+        </section>
+
+        <section class="content-wrapper main-content clear-fix">
+            @RenderBody()
+        </section>
+    </div>
 
     @Scripts.Render("~/bundles/jquery")
     @RenderSection("scripts", required: false)
