--- a/MvcGuessMySonsName/Views/GuessedNames/Index.cshtml
+++ b/MvcGuessMySonsName/Views/GuessedNames/Index.cshtml
@@ -1,16 +1,16 @@
 ﻿@model IEnumerable<MvcGuessMySonsName.Models.GuessedName>
 
 @{
-    ViewBag.Title = "Fjöldi ágiskana á nöfn";
+    ViewBag.Subtitle = "Fjöldi ágiskana á nöfn";
 }
 
 <table>
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Name)
+            @("Nafn")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Count)
+            @("Fjöldi")
         </th>
         <th></th>
     </tr>
