--- a/MvcGuessMySonsName/Views/Guesses/Index.cshtml
+++ b/MvcGuessMySonsName/Views/Guesses/Index.cshtml
@@ -1,19 +1,19 @@
 ﻿@model IEnumerable<MvcGuessMySonsName.Models.Guess>
 
 @{
-    ViewBag.Title = "Nöfn sem giskað hefur verið á";
+    ViewBag.Subtitle = "Nöfn sem giskað hefur verið á";
 }
 
 <table>
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Date)
+            @("Dagsetning")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Name)
+            @("Nafn")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Ip)
+            @("Ip tala")
         </th>
         <th></th>
     </tr>
