--- a/MvcGuessMySonsName/Views/Home/Index.cshtml
+++ b/MvcGuessMySonsName/Views/Home/Index.cshtml
@@ -1,6 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Giskaðu á nafn sonar míns";
-    ViewBag.Subtitle = "Föðurnafnið þarf ekki að rita, rita þarf nafnið alveg rétt til að rétt svar fáist.";
+    ViewBag.Subtitle = "Föðurnafnið þarf ekki að rita, rita þarf nafnið alveg rétt til að rétt svar fáist";
 }
 
 
