--- a/MvcGuessMySonsName/Views/Home/Index.cshtml
+++ b/MvcGuessMySonsName/Views/Home/Index.cshtml
@@ -23,3 +23,11 @@
     }
 }
 
+
+@*<div>
+    @{ Html.RenderAction("Index", "Guesses" ); }
+    @{ Html.RenderAction("Index", "GuessedNames" ); }
+</div>*@
+
+
+
