--- a/MvcGuessMySonsName/Views/Shared/_Layout.cshtml
+++ b/MvcGuessMySonsName/Views/Shared/_Layout.cshtml
@@ -19,7 +19,8 @@
                 <nav>
                     <ul id="menu">
                         <li>@Html.ActionLink("Heim", "Index", "Home")</li>
-                        <li>@Html.ActionLink("Ágiskanir", "Index", "Guesses")</li>
+                        <li>@Html.ActionLink("Mínar ágiskanir", "MyGuesses", "Guesses")</li>
+                        <li>@Html.ActionLink("Allar ágiskanir", "Index", "Guesses")</li>
                         <li>@Html.ActionLink("Vinsældir ágiskana", "Index", "GuessedNames")</li>
                     </ul>
                 </nav>
