--- a/MvcGuessMySonsName/Views/Home/Index.cshtml
+++ b/MvcGuessMySonsName/Views/Home/Index.cshtml
@@ -2,9 +2,8 @@
     ViewBag.Subtitle = "Litli stúfurinn verður skýrður sunnudaginn 23. desember 2012";
 }
 
-
 <div class="float-right">
-    <img src="~/Images/ibilnum2.png" width="300"/>
+    <img src="~/Images/ibilnumsmall.png" width="300"/>
 </div>
 
 <div class="float-left">
