--- a/MvcGuessMySonsName/Views/Shared/_Layout.cshtml
+++ b/MvcGuessMySonsName/Views/Shared/_Layout.cshtml
@@ -43,7 +43,8 @@
             @RenderBody()
         </section>
     </div>
-    
+
+    @* Ætti að vera neðst í síðunni en ég þarf jquery fyrir facebook login, finna betri lausn *@
     @Scripts.Render("~/bundles/jquery")
     @RenderSection("scripts", required: false)
 
