Facebook & google connect

--- a/MvcGuessMySonsName/Views/GuessedNames/Index.cshtml
+++ b/MvcGuessMySonsName/Views/GuessedNames/Index.cshtml
@@ -6,10 +6,10 @@
 
 <table>
     <tr>
-        <th>
+        <th style="min-width:100px">
             @("Nafn")
         </th>
-        <th>
+        <th style="min-width:100px">
             @("Fjöldi")
         </th>
         <th></th>
