--- a/MvcGuessMySonsName/Views/Guesses/Index.cshtml
+++ b/MvcGuessMySonsName/Views/Guesses/Index.cshtml
@@ -6,13 +6,16 @@
 
 <table>
     <tr>
-        <th>
+        <th style="min-width:100px">
             @("Dagsetning")
         </th>
-        <th>
+        <th style="min-width:100px">
             @("Nafn")
         </th>
-        <th>
+        <th style="min-width:100px">
+            @("Notandi")
+        </th>
+        <th style="min-width:100px">
             @("Ip tala")
         </th>
         <th></th>
@@ -25,6 +28,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Name)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Username)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Ip)
