--- a/MvcGuessMySonsName/Views/Home/Index.cshtml
+++ b/MvcGuessMySonsName/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Subtitle = "Litli stúfurinn verður skýrður sunnudaginn 23. desember 2012";
+    ViewBag.Subtitle = "Nafnið verður birt á síðunni sunnudaginn 23. desember 2012";
 }
 
 <div class="float-right">
