--- a/MvcGuessMySonsName/Views/GuessedNames/Index.cshtml
+++ b/MvcGuessMySonsName/Views/GuessedNames/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<MvcGuessMySonsName.Models.GuessedName>
 
 @{
-    ViewBag.Subtitle = "Fjöldi ágiskana á nöfn";
+    ViewBag.Subtitle = "Fjöldi ágiskana alls: " + Model.Count();
 }
 
 <table>
