--- a/MvcGuessMySonsName/Views/Guesses/Index.cshtml
+++ b/MvcGuessMySonsName/Views/Guesses/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<MvcGuessMySonsName.Models.Guess>
 
 @{
-    ViewBag.Subtitle = "Nöfn sem giskað hefur verið á";
+    ViewBag.Subtitle = "Fjöldi ágiskana alls: " + Model.Count();
 }
 
 <table>
