--- a/MvcGuessMySonsName/Views/Shared/_Layout.cshtml
+++ b/MvcGuessMySonsName/Views/Shared/_Layout.cshtml
@@ -10,6 +10,8 @@
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <script src="~/Scripts/globalize.js"></script>
+    <script src="~/Scripts/globalize.culture.is-IS.js"></script>
 </head>
 <body>
 
