Fjöldi réttra ágiskana

--- a/MvcGuessMySonsName/Views/Home/Index.cshtml
+++ b/MvcGuessMySonsName/Views/Home/Index.cshtml
@@ -8,6 +8,10 @@
 
 <div class="float-left">
 
+    <h2 style="color:blue">
+        Fjöldi réttra ágiskana er: @ViewBag.CorrectCount
+    </h2>
+
     <ul>
         <li>Hástafir og lágstafir verða að vera réttir</li>
         <li>Föðurnafni skal sleppa</li>
