Notendur og rétt nöfn

--- a/MvcGuessMySonsName/Views/Home/Index.cshtml
+++ b/MvcGuessMySonsName/Views/Home/Index.cshtml
@@ -8,9 +8,9 @@
 
 <div class="float-left">
 
-    <h2 style="color:blue">
-        Fjöldi réttra ágiskana er: @ViewBag.CorrectCount
-    </h2>
+    <p style="color:blue">
+        Fjöldi réttra ágiskana er: @ViewBag.CorrectCount. Þeir sem eru búnir að giska á rétt nafn eru: @ViewBag.CorrectUsers
+    </p>
 
     <ul>
         <li>Hástafir og lágstafir verða að vera réttir</li>
